fix: warning animation not working more than once on ios

--- a/index.scss
+++ b/index.scss
@@ -369,17 +369,17 @@ button {
 ** Animation
 ** ==================================== */
 
+.overlay-warning {
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+}
 .flash-warning {
-  &:after {
-    content: '';
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    animation: warn 300ms linear;
-  }
+  animation: warn 300ms linear;
 }
 @keyframes warn {
   25% {
